@@ -1,0 +1,1 @@
+mc12_8TeV.158344.Pythia8_Madgraph_AU2MSTW2008LO_4top_SM.merge.NTUP_SUSY.e1367_s1499_s1504_r3658_r3549_p1512/	199799	0.00068523
