@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2013-10-28 Steve
+	* Merged SusyCommon-00-01-03-branch into trunk
+		* Update to MC12 pileup reweighting file
+
 2013-10-04 Davide
 	* Add etcone20 to Lepton
 
@@ -806,3 +810,4 @@
 
 2012-04-04 Steve
 	* Initial package layout
+
